--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -1,15 +1,100 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
 
-html, body {
+
+body {
+  background-image: url('https://cdn.hipwallpaper.com/i/71/89/IV4lZ3.jpg');
+  image-resolution: 100px;
+  background-size: cover;
+  background-position: top;
   min-height: 100%;
   height: 100%;
   overflow: hidden;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
 }
 
+.navbar {
+  border-radius: 0px;
+  background-color: rgba(33, 34, 36, 0.8);
+  margin: auto;
+  width: 100%;
+  height: 20px;
+  padding: left;
+}
+
+#title {
+  margin-top: 10px;
+  float: left;
+  font-size: 25px;
+  font-family:Arial, Helvetica, sans-serif;
+  color: azure;
+}
+
+.logo{
+  margin-left: 50px;
+  float: left;
+}
+
+button{
+  text-align: center;
+  line-height: 0px;
+  color: #000;
+  padding:15px 14px;
+  border: 2px solid azure;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+  float: right;
+  margin-top: 7px;
+  margin-right: 50px;
+  font-family:Geneva;
+}
+
+.container{
+  padding: 0px;
+  width: 100%;
+}
+
+.fill-height{
+  height: calc(100vh - 50px);
+}
+
+.sidebar {
+  z-index: 1000;
+  width: 250px;
+  background-color: rgba(33, 34, 36, 0.8);
+  overflow-y: auto;
+  min-width: 250px;
+  max-width: 600px;
+  resize: horizontal;
+  position: fixed;
+  color: azure;
+  font-family: Geneva;
+}
+
+.viewer {
+  position: absolute;
+  width: 100%;
+}
+
+.jstree-anchor {
+  font-size: 12px;
+  height: 15px;
+ }
+
+ i.jstree-icon {
+   width: 12px;
+   height: 12px;
+ }
+
+.no_checkbox>i.jstree-checkbox
+{
+    display:none
+}
+
+
+
+/*
 #viewerContainer {
-  padding-left: 250px;
+  padding-left: 150px;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -27,7 +112,7 @@ html, body {
   margin-left: -250px;
   overflow-y: auto;
   resize: horizontal;
-  background: rgba(150,160,180,.5);
+  background: rgba(91, 199, 20, 0.1);
 }
 
   
@@ -53,12 +138,8 @@ html, body {
 #sidebar header {
   color: #fff;
   background-color: #263238;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 52px;
   text-align: left;
 }
-
-.no_checkbox>i.jstree-checkbox
-{
-    display:none
-}
+*/
