--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -65,6 +65,18 @@ body {
   width: calc(100% - 100px)
 }
 
+.half-width{
+  width: 50%;
+}
+
+.left{
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
 #sidebar-container {
   display: none;
   overflow: scroll;
