--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -175,3 +175,18 @@ text{
   background: #6d801ac6; 
 }
 
+
+/* SVG */
+.scg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%; /* aspect ratio */
+  vertical-align: top;
+  overflow: hidden;
+}
+.svg-content-responsive {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+}
